fix jumpy solutions tab in top nav (#13687)

--- a/theme/src/scss/_header.scss
+++ b/theme/src/scss/_header.scss
@@ -259,6 +259,14 @@
                                     color:theme("colors.gray.700");
                                 }
                             }
+
+                            .list-title-width-hold::after {
+                                @apply font-semibold pl-7;
+                                content: attr(title);
+                                display: block;
+                                visibility: hidden;
+                                height: 0;
+                            }
                         }
                     }
 
